Update README.txt
Added information about runtime configuration including JVM arguments